4.feladat: chart.html

--- a/table.html
+++ b/table.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <h1>Web-programozás-1 Előadás Házi feladat</h1>
+            <h1>2.feladat: Táblázat</h1>
         </header>
         <nav>
             <ul>
