--- a/chart.html
+++ b/chart.html
@@ -3,32 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web-programozás-1</title>
+    <title>ChartJS Menü</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
-        <h1>Web-programozás-1 Előadás Házi feladat</h1>
+        <h1>4. feladat: ChartJS</h1>
     </header>
     <nav>
         <ul>
-            <li><a href="index.html" class="active">Főoldal</a></li>
+            <li><a href="index.html">Főoldal</a></li>
             <li><a href="table.html">Táblázat</a></li>
             <li><a href="html5.html">HTML5</a></li>
-            <li><a href="chart.html">ChartJS</a></li>
+            <li><a href="chart.html" class="active">ChartJS</a></li>
             <li><a href="ajax.html">AJAX</a></li>
             <li><a href="oojs.html">OOJS</a></li>
         </ul>
     </nav>
-    <aside>
-        <p>Oldalsáv tartalom</p>
-    </aside>
     <div class="content">
-        <p>Üdvözöljük a Web-programozás-1 házi feladat oldalán!</p>
+        <h2>5x5-ös Táblázat és Diagram</h2>
+        <p>Kattints bármelyik sorra az adatok megjelenítéséhez!</p>
+        <div class="table-section">
+            <table id="data-table">
+                <tbody>
+                    <!-- JavaScript tölti ki -->
+                </tbody>
+            </table>
+        </div>
+        <div class="chart-container" style="margin-top: 30px;">
+            <div class="chart-container">
+                <canvas id="chart"></canvas>
+            </div>
+        </div>
     </div>
     <footer>
         <p>Készítette: Bajáki Kristóf ALJOX4 és Bódi Dániel - GFEKAK</p>
     </footer>
+
+    <script>
+        const table = document.getElementById("data-table").getElementsByTagName("tbody")[0];
+        const rows = 5;
+        const cols = 5;
+        const data = [];
+
+        for (let i = 0; i < rows; i++) {
+            const row = [];
+            const tr = document.createElement("tr");
+            for (let j = 0; j < cols; j++) {
+                const num = Math.floor(Math.random() * 100);
+                row.push(num);
+                const td = document.createElement("td");
+                td.textContent = num;
+                tr.appendChild(td);
+            }
+            tr.addEventListener("click", () => updateChart(row));
+            table.appendChild(tr);
+            data.push(row);
+        }
+
+        const ctx = document.getElementById("chart").getContext("2d");
+        const chart = new Chart(ctx, {
+            type: "line",
+            data: {
+                labels: Array.from({length: cols}, (_, i) => `Oszlop ${i+1}`),
+                datasets: [{
+                    label: 'Kiválasztott sor adatai',
+                    data: [],
+                    fill: false,
+                    borderColor: 'rgb(75, 192, 192)',
+                    tension: 0.1
+                }]
+            }
+        });
+
+        function updateChart(values) {
+            chart.data.datasets[0].data = values;
+            chart.update();
+        }
+    </script>
 </body>
 </html>
