--- a/html5.html
+++ b/html5.html
@@ -9,13 +9,13 @@
 <body>
     
     <header>
-        <h1>HTML5 API Példák</h1>
+        <h1>3. feladat: HTML5 API Példák</h1>
     </header>
     <nav>
             <ul>
-                <li><a href="index.html" class="active">Főoldal</a></li>
+                <li><a href="index.html">Főoldal</a></li>
                 <li><a href="table.html">Táblázat</a></li>
-                <li><a href="html5.html">HTML5</a></li>
+                <li><a href="html5.html" class="active">HTML5</a></li>
                 <li><a href="chart.html">ChartJS</a></li>
                 <li><a href="ajax.html">AJAX</a></li>
                 <li><a href="oojs.html">OOJS</a></li>
