--- a/chart.html
+++ b/chart.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>4. feladat: ChartJS</h1>
+        <h1>4. Feladat: ChartJS</h1>
     </header>
     <nav>
         <ul>
