--- a/html5.html
+++ b/html5.html
@@ -9,7 +9,7 @@
 <body>
     
     <header>
-        <h1>3. feladat: HTML5 API Példák</h1>
+        <h1>3. Feladat: HTML5 API Példák</h1>
     </header>
     <nav>
             <ul>
