--- a/oojs.html
+++ b/oojs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-programozás-1</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+    <script defer src="calculator.js"></script>
 </head>
 <body>
     <header>
@@ -13,20 +13,49 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html" class="active">Főoldal</a></li>
+            <li><a href="index.html">Főoldal</a></li>
             <li><a href="table.html">Táblázat</a></li>
             <li><a href="html5.html">HTML5</a></li>
             <li><a href="chart.html">ChartJS</a></li>
             <li><a href="ajax.html">AJAX</a></li>
-            <li><a href="oojs.html">OOJS</a></li>
+            <li><a href="oojs.html" class="active">OOJS</a></li>
         </ul>
     </nav>
-    <aside>
-        <p>Oldalsáv tartalom</p>
-    </aside>
-    <div class="content">
-        <p>Üdvözöljük a Web-programozás-1 házi feladat oldalán!</p>
-    </div>
+    <main>
+        <section>
+            <div class="calculator">
+                <div id="display">0</div>
+                <div class="button-row">
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                    <button>/</button>
+                </div>
+                <div class="button-row">
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+                    <button>*</button>
+                </div>
+                <div class="button-row">
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                    <button>-</button>
+                </div>
+                <div class="button-row">
+                    <button>0</button>
+                    <button>.</button>
+                    <button>=</button>
+                    <button>+</button>
+                </div>
+                <!-- Clear gomb hozzáadása -->
+                <div class="button-row">
+                    <button id="clear">C</button>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer>
         <p>Készítette: Bajáki Kristóf ALJOX4 és Bódi Dániel - GFEKAK</p>
     </footer>
