--- a/ajax.html
+++ b/ajax.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>5. Feladat: AJAX</h1>
+        <h1>Web-programozás-1 Előadás Házi feladat</h1>
+        <h2>5. Feladat: AJAX</h2>
     </header>
     <nav>
         <ul>
