--- a/chart.html
+++ b/chart.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>4. Feladat: ChartJS</h1>
+        <h1>Web-programozás-1 Előadás Házi feladat</h1>
+        <h2>4. Feladat: ChartJS</h2>
     </header>
     <nav>
         <ul>
