--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
             <li><a href="oojs.html">OOJS</a></li>
         </ul>
     </nav>
-    <aside>
-        <p>Oldalsáv tartalom</p>
-    </aside>
-    <div class="content">
-        <p>Üdvözöljük a Web-programozás-1 házi feladat oldalán!</p>
-    </div>
+    <section>
+        <div class="content">
+            <p>Üdvözöljük a Web-programozás-1 házi feladat oldalán!</p>
+        </div>
+    </section>
     <footer>
         <p>Készítette: Bajáki Kristóf ALJOX4 és Bódi Dániel - GFEKAK</p>
     </footer>
