--- a/table.html
+++ b/table.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>2. Feladat: Táblázat</h1>
+        <h1>Web-programozás-1 Előadás Házi feladat</h1>
+        <h2>2. Feladat: Táblázat</h2>
     </header>
     <nav>
         <ul>
