--- a/oojs.html
+++ b/oojs.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>6. Feladat: OOJS</h1>
+        <h1>Web-programozás-1 Előadás Házi feladat</h1>
+        <h2>6. Feladat: OOJS</h2>
     </header>
     <nav>
         <ul>
